[tool.poetry]
name = "pam-tester"
version = "0.0.1"
description = "Tool for testing PAM configurations"
authors = ["Martin Schurz"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
pam-tester = "pam_tester.pam_tester:pam_auth"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
pam = "^0.2.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
tox = "^4.6.4"
ruff = "^0.0.280"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
