[tool.poetry]
name = "pam-tester"
version = "0.0.2"
description = "Tool for testing PAM configurations"
readme = "README.md"
authors = ["Martin Schurz <Martin.Schurz@telekom.de>"]
license = "GPL-3.0-only"
homepage = "https://github.com/dev-sec/pam-tester"
repository = "https://github.com/dev-sec/pam-tester"
documentation = "https://github.com/dev-sec/pam-tester"

[tool.poetry.urls]
Changelog = "https://github.com/dev-sec/pam-tester/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
pam-tester = "pam_tester.pam_tester:pam_auth"

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.4"
pam = "^0.2.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
tox = "^4.6.4"
ruff = "^0.0.282"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
